<resources>
    <string name="app_name">Резниченко Михаил</string>

    <string name="rating">Рейтинг</string>
    <string name="rating_number">5</string>
    <string name="code_strings">Написано строк кода</string>
    <string name="code_strings_number">5</string>
    <string name="projects">Проектов</string>
    <string name="projects_number">5</string>

    <string name="phone_hint">Мобильный</string>
    <string name="phone_text">+7 (951) 395-07-62</string>
    <string name="email_hint">E-mail</string>
    <string name="email_text">mihail.reznichenko.98@mail.ru</string>
    <string name="vk_hint">Профиль в VK</string>
    <string name="vk_text">vk.com/rezmike</string>
    <string name="repository_hint">Репозиторий</string>
    <string name="repository_text">github.com/RezMike/DevIntensive</string>
    <string name="about_hint">О себе</string>
    <string name="about_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <string name="name">Резниченко Михаил</string>
    <string name="my_profile">Мой профиль</string>
    <string name="team">Команда</string>

    <string name="image_placeholder">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галлереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.choose_photo">Выберите фото</string>

    <string name="give_permission">Для корректной работы приложения необходимо дать требуемые разрешения!</string>
    <string name="need_camera_permission">Необходимо разрешение на работу с камерой!</string>
    <string name="need_write_permission">Необходимо разрешение на запись!</string>
    <string name="permit">Разрешить</string>

    <string name="choose_email_client">Выберите e-mail клиент:</string>
    <string name="choose_browser">Выберите браузер:</string>

    <string name="auth_enter">Войти</string>
    <string name="auth_email_hint">E-mail</string>
    <string name="auth_password_hint">Пароль</string>
    <string name="auth_remember">Забыли пароль?</string>

    <string name="error_create_file">Ошибка создания файла</string>
    <string name="error_phone_et">Номер телефона должен содержать 11-20 символов</string>
    <string name="error_email_et">Введен неверный адрес e-mail</string>
    <string name="error_vk_et">Введите адрес в формате vk.com/xxx</string>
    <string name="error_git_et">Введите адрес в формате github.com/xxx</string>
</resources>
