<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/user_photo_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/header_bg"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/AppTheme.PopupOverlay"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/score_layout"
                        android:layout_weight="1">

                        <TextView
                            style="@style/score_text.count"
                            android:text="@string/rating_number"/>

                        <TextView
                            style="@style/score_text"
                            android:text="@string/rating"/>

                    </LinearLayout>

                    <View style="@style/separator_vertical"/>

                    <LinearLayout
                        style="@style/score_layout"
                        android:layout_weight="2">

                        <TextView
                            style="@style/score_text.count"
                            android:text="@string/code_strings_number"/>

                        <TextView
                            style="@style/score_text"
                            android:text="@string/code_strings"/>

                    </LinearLayout>

                    <View style="@style/separator_vertical"/>

                    <LinearLayout
                        style="@style/score_layout"
                        android:layout_weight="1">

                        <TextView
                            style="@style/score_text.count"
                            android:text="@string/projects_number"/>

                        <TextView
                            style="@style/score_text"
                            android:text="@string/projects"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout style="@style/item_layout">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_call_grey_24dp"/>

                    <LinearLayout style="@style/edit_text_layout">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/phone_et"
                                style="@style/edit_text"
                                android:hint="@string/phone_hint"
                                android:inputType="phone"
                                android:text="@string/phone_text"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/call_img"
                        style="@style/icon.right"
                        android:src="@drawable/ic_phone_in_talk_grey_24dp"/>
                </LinearLayout>

                <View style="@style/separator_horizontal"/>

                <LinearLayout style="@style/item_layout">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_email_grey_24dp"/>

                    <LinearLayout style="@style/edit_text_layout">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/email_et"
                                style="@style/edit_text"
                                android:hint="@string/email_hint"
                                android:inputType="textEmailAddress"
                                android:text="@string/email_text"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_send_grey_24dp"/>
                </LinearLayout>

                <View style="@style/separator_horizontal"/>

                <LinearLayout style="@style/item_layout">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_vk_grey_24dp"/>

                    <LinearLayout style="@style/edit_text_layout">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/vk_et"
                                style="@style/edit_text"
                                android:hint="@string/vk_hint"
                                android:inputType="textWebEditText"
                                android:text="@string/vk_text"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_visibility_grey_24dp"/>
                </LinearLayout>

                <View style="@style/separator_horizontal"/>

                <LinearLayout style="@style/item_layout">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_repository_grey_24dp"/>

                    <LinearLayout style="@style/edit_text_layout">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/git_et"
                                style="@style/edit_text"
                                android:hint="@string/repository_hint"
                                android:inputType="textWebEditText"
                                android:text="@string/repository_text"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_visibility_grey_24dp"/>
                </LinearLayout>

                <View style="@style/separator_horizontal"/>

                <LinearLayout style="@style/item_layout">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_account_circle_grey_24dp"/>

                    <LinearLayout
                        style="@style/edit_text_layout"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/bio_et"
                                style="@style/edit_text"
                                android:hint="@string/about_hint"
                                android:text="@string/about_text"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_visibility_grey_24dp"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_fab_right"
            android:src="@drawable/ic_create_white_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right|"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>