<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        style="@style/score_layout"
        android:layout_weight="1">

        <TextView
            android:id="@+id/user_info_rating"
            style="@style/score_text.count"/>

        <TextView
            style="@style/score_text"
            android:text="@string/rating"/>

    </LinearLayout>

    <View style="@style/separator_vertical"/>

    <LinearLayout
        style="@style/score_layout"
        android:layout_weight="2">

        <TextView
            android:id="@+id/user_info_lines"
            style="@style/score_text.count"/>

        <TextView
            style="@style/score_text"
            android:text="@string/code_strings"/>

    </LinearLayout>

    <View style="@style/separator_vertical"/>

    <LinearLayout
        style="@style/score_layout"
        android:layout_weight="1">

        <TextView
            android:id="@+id/user_info_projects"
            style="@style/score_text.count"/>

        <TextView
            style="@style/score_text"
            android:text="@string/projects"/>

    </LinearLayout>
</LinearLayout>