<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_background">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_bg"/>

        <android.support.v7.widget.CardView
            android:id="@+id/authorization_box"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal_16"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_half_large_28">

                    <View
                        android:id="@+id/login_indicator"
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_accent"/>

                    <TextView
                        android:id="@+id/login_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_small_8"
                        android:layout_marginTop="@dimen/spacing_small_8"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/auth_enter"
                        android:textAllCaps="true"
                        android:textColor="@color/color_accent"
                        android:textSize="@dimen/font_medium_20"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_medial_24"
                    android:paddingLeft="@dimen/spacing_medial_24"
                    android:paddingRight="@dimen/spacing_medial_24">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_email"
                            style="@style/login_edit_text"
                            android:hint="@string/auth_email_hint"
                            android:inputType="textEmailAddress"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_password"
                            style="@style/login_edit_text"
                            android:hint="@string/auth_password_hint"
                            android:inputType="textPassword"
                            android:text=""/>
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_btn"
                        style="@style/AppTheme.Button.Red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:minWidth="126dp"
                        android:text="@string/auth_enter"
                        android:textAllCaps="true"
                        android:textSize="@dimen/font_normal_14"
                        android:theme="@style/AppTheme.Button.Red"/>

                    <TextView
                        android:id="@+id/remember_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:fontFamily="sans-serif-regular"
                        android:text="@string/auth_remember"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/font_normal_14"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>